Fix the positioning of the TryChromeDialog when the taskbar is hidden.

In cases of multi-monitor, MonitorFromWindow may return a secondary
monitor depending on the orientation of the monitors, so simply position
the window based on the work area of the primary monitor.

Also fixes a bug in the panic fallback that was improperly increasing
the size of the dialog.

BUG=700857
R=huangs@chromium.org

Review-Url: https://codereview.chromium.org/2742343002
Cr-Commit-Position: refs/heads/master@{#456664}

Former-commit-id: b2dd7ef5625c8ab415c1257d53b7a721dfffc344